Update before supervisor meeting

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -64,30 +64,30 @@ ssa_pop2022 <- 1.2 * 1e9 #' From the world bank
 
 This thesis is about applied and methodological Bayesian statistics.
 It is applied and methodological in that I am concerned with real world questions and the means to answer them.
-It is Bayesian in that I arrive at conclusions based on data using probability models.
+The approach to statistics is Bayesian because I arrive at conclusions based on data using probability models.
 
-(ref:gbd) HIV/AIDS is the largest cause of DALYs for non-infacts (>1 years) in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights vary depending on severity of the condition.
+(ref:gbd) HIV/AIDS is the largest cause of DALYs among individuals aged >1 year in SSA [@ihme2019]. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights vary between 0 (full health) and 1 (death) depending on severity of the condition.
 
 ```{r gbd, fig.cap="(ref:gbd)"}
 knitr::include_graphics("figures/introduction/gbd.png")
 ```
 
 The real world questions relate to surveillance of the human immunodeficiency virus (HIV) epidemic in sub-Saharan Africa (SSA).
-HIV is the largest cause of disability adjusted life years (DALYs) in SSA among non-infants [@ihme2019; Figure \@ref(fig:gbd)].
+Over 30 years since the beginning of the epidemic, HIV is the largest cause of disability adjusted life years (DALYs) in SSA among non-infants [@ihme2019; Figure \@ref(fig:gbd)].
 Quantifying the epidemic using statistics is an important part of the public health response, and the path towards disease control and elimination.
 However, there are substantial challenges in obtaining suitable estimates of relevant indicators needed to mount this response.
 
 The data I use are recorded from national household surveys or routinely collected from healthcare facilities.
 An important feature of this data is its location and the time at which it was recorded.
 While diverse, spatio-temporal data have distinctive commonalities which reoccur across settings.
-As a result, the work in this thesis makes use of modelling techniques from spatio-temporal statistics.
+As a result, the work in this thesis makes use of, and aspires to contribute to the development of, modelling techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
-Each project in this thesis, as well as the thesis itself, is accompanied by R code, hosted on GitHub.
+Each project in this thesis, as well as the thesis itself, is accompanied by R [@r] code, hosted on [GitHub](https://github.com/athowes).
 
 ## Chapter overview
 
-The structure of this thesis (Figure \@ref(fig:chapter-flowchart)) is as follows:
+This thesis is structured (Figure \@ref(fig:chapter-flowchart)) as follows:
 
 * Chapter \@ref(hiv-aids): I begin by providing an overview of the HIV/AIDS epidemic, and describing the challenges faced by disease surveillance efforts.
 * Chapter \@ref(bayes-st): I then introduce the statistical concepts and notation used throughout the thesis, focusing on Bayesian modelling and computation, spatio-temporal statistics, and survey methods.
@@ -103,7 +103,7 @@ I apply the method to data from Malawi, and analyse the consequences of inferenc
 Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
 * Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
 
-(ref:chapter-flowchart) The chapters in this thesis are structured to depend on each other. Dashed lines represents a recommended, but not required dependency. Though chronological order is recommended, Chapter \@ref(beyond-borders), Chapter \@ref(multi-agyw) and Chapter \@ref(naomi-aghq) may be read in any order as they correspond to separable research projects.
+(ref:chapter-flowchart) Some chapters of the thesis should be read before others. Dashed lines represent recommended, but not required reading. Though chronological order is recommended, Chapter \@ref(beyond-borders), Chapter \@ref(multi-agyw) and Chapter \@ref(naomi-aghq) may be read in any order as they correspond to research projects which are for the most part separable.
 
 ```{r chapter-flowchart, fig.cap="(ref:chapter-flowchart)"}
 knitr::include_graphics("figures/introduction/chapter-flowchart.png")
