--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -82,9 +82,8 @@ knitr::include_graphics("figures/hiv-aids/overall-picture.png")
 ```
 
 <!-- The effort has translated into progress -->
-Implementation of HIV prevention and treatment options have had a substantial impact on the course of the epidemic.
-As a result, the number of new HIV infections and AIDS-related deaths per year have both fallen significantly since their peak (Figure \@ref(fig:overall-picture)).
-I describe the most significant of these options below:
+Implementation of HIV prevention and treatment has seen both the number of new HIV infections and AIDS-related deaths per year fall significantly since their peak (Figure \@ref(fig:overall-picture)).
+The most significant evidence-based interventions are:
 
 * Antiretroviral therapy (ART) is a drug which stops the virus from replicating in the body.
 A person living with HIV who takes ART daily can live a full and healthy life, transforming what was once a terminal illness to a treatable chronic condition.
