--- a/docs/main.tex
+++ b/docs/main.tex
@@ -345,7 +345,7 @@ Together, the contributions in this thesis help to guide precision HIV policy in
 
 This thesis is about applied and methodological Bayesian statistics.
 It is applied and methodological in that I am concerned with real world questions and the means to answer them.
-It is Bayesian in that I arrive at conclusions based on data using probability models.
+The approach to statistics is Bayesian because I arrive at conclusions based on data using probability models.
 
 
 
@@ -355,26 +355,26 @@ It is Bayesian in that I arrive at conclusions based on data using probability m
 
 }
 
-\caption{HIV/AIDS is the largest cause of DALYs for non-infacts (\textgreater1 years) in SSA \autocite{ihme2019}. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights vary depending on severity of the condition.}\label{fig:gbd}
+\caption{HIV/AIDS is the largest cause of DALYs among individuals aged \textgreater1 year in SSA \autocite{ihme2019}. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights vary between 0 (full health) and 1 (death) depending on severity of the condition.}\label{fig:gbd}
 \end{figure}
 
 The real world questions relate to surveillance of the human immunodeficiency virus (HIV) epidemic in sub-Saharan Africa (SSA).
-HIV is the largest cause of disability adjusted life years (DALYs) in SSA among non-infants {[}\textcite{ihme2019}; Figure \ref{fig:gbd}{]}.
+Over 30 years since the beginning of the epidemic, HIV is the largest cause of disability adjusted life years (DALYs) in SSA among non-infants {[}\textcite{ihme2019}; Figure \ref{fig:gbd}{]}.
 Quantifying the epidemic using statistics is an important part of the public health response, and the path towards disease control and elimination.
 However, there are substantial challenges in obtaining suitable estimates of relevant indicators needed to mount this response.
 
 The data I use are recorded from national household surveys or routinely collected from healthcare facilities.
 An important feature of this data is its location and the time at which it was recorded.
 While diverse, spatio-temporal data have distinctive commonalities which reoccur across settings.
-As a result, the work in this thesis makes use of modelling techniques from spatio-temporal statistics.
+As a result, the work in this thesis makes use of, and aspires to contribute to the development of, modelling techniques from spatio-temporal statistics.
 
 Computation is an essential part of modern statistical practice.
-Each project in this thesis, as well as the thesis itself, is accompanied by R code, hosted on GitHub.
+Each project in this thesis, as well as the thesis itself, is accompanied by R \autocite{r} code, hosted on \href{https://github.com/athowes}{GitHub}.
 
 \hypertarget{chapter-overview}{%
 \section{Chapter overview}\label{chapter-overview}}
 
-The structure of this thesis (Figure \ref{fig:chapter-flowchart}) is as follows:
+This thesis is structured (Figure \ref{fig:chapter-flowchart}) as follows:
 
 \begin{itemize}
 \tightlist
@@ -407,7 +407,7 @@ The structure of this thesis (Figure \ref{fig:chapter-flowchart}) is as follows:
 
 }
 
-\caption{The chapters in this thesis are structured to depend on each other. Dashed lines represents a recommended, but not required dependency. Though chronological order is recommended, Chapter \ref{beyond-borders}, Chapter \ref{multi-agyw} and Chapter \ref{naomi-aghq} may be read in any order as they correspond to separable research projects.}\label{fig:chapter-flowchart}
+\caption{Some chapters of the thesis should be read before others. Dashed lines represent recommended, but not required reading. Though chronological order is recommended, Chapter \ref{beyond-borders}, Chapter \ref{multi-agyw} and Chapter \ref{naomi-aghq} may be read in any order as they correspond to research projects which are for the most part separable.}\label{fig:chapter-flowchart}
 \end{figure}
 
 \hypertarget{hiv-aids}{%
@@ -445,9 +445,8 @@ The investment of \$100 billion by PEPFAR, constituting the ``largest commitment
 \caption{Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59\% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68\% \autocite{unaids2023aidsinfo}. Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa.}\label{fig:overall-picture}
 \end{figure}
 
-Implementation of HIV prevention and treatment options have had a substantial impact on the course of the epidemic.
-As a result, the number of new HIV infections and AIDS-related deaths per year have both fallen significantly since their peak (Figure \ref{fig:overall-picture}).
-I describe the most significant of these options below:
+Implementation of HIV prevention and treatment has seen both the number of new HIV infections and AIDS-related deaths per year fall significantly since their peak (Figure \ref{fig:overall-picture}).
+The most significant evidence-based interventions are:
 
 \begin{itemize}
 \tightlist
