--- a/references.bib
+++ b/references.bib
@@ -1439,4 +1439,12 @@ doi = {10.1201/9781420072884-c30}
   publisher={Wiley Online Library}
 }
 
-
+@Manual{r,
+  title        = {R: A Language and Environment for Statistical
+                  Computing},
+  author       = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address      = {Vienna, Austria},
+  year         = 2022,
+  url          = {https://www.R-project.org}
+}
